frontend: fix tx note wrapping/collapsing

--- a/frontends/web/src/components/transactions/components/tx-detail-dialog/tx-detail-dialog.module.css
+++ b/frontends/web/src/components/transactions/components/tx-detail-dialog/tx-detail-dialog.module.css
@@ -122,7 +122,11 @@
 
 .note {
     margin: 0;
-    width: 85%;
+    width: 80%;
+}
+
+.noteLabel {
+    width: 15%;
 }
 
 .note input {
